# zexxcoin

./: .env.example  .gitignore  Anchor.toml  README.md  TOKEN_CREATION.MD  TOKEN_CREATION.md  package-lock.json  package.json  program-id.txt  terminus_presale-keypair.json  todo.ts  tsconfig.json
programs/constants/: Cargo.toml
programs/constants/src/: lib.rs
programs/constants/src/constants/: mod.rs  presale_config.rs
programs/constants/src/errors/: errors.rs
programs/constants/src/instructions/: buy_token.rs  claim_token.rs  create_presale.rs  deposit_token.rs  emergency_stop.rs  mod.rs  resume_presale.rs  update_presale.rs  withdraw_sol.rs  withdraw_token.rs
programs/constants/src/state/: mod.rs  phase_info.rs  presale_info.rs  user_info.rs
scripts/: deploy-program.ts  generate-program-keypair.ts
src/config/: integrationConnection.ts  token-config.ts  token-metadata.json
src/constants/: index.ts  token.ts
src/integration/: buyToken.ts  claimToken.ts  createPresale.ts  depositToken.ts
src/token-creation/: create-new-spl-token.ts  create-spl-token.ts  create-token.ts  spl-token.ts  update-metadata.ts  update-token-config.ts  upload-to-arweave.ts  upload-token-assets.ts
src/token-creation/createdTokens/: OLD.json  token-details-$DEVDEAD-DDT-1741764348673.json  token-details-$SAYAPA-SPA-1740047577454.json
src/types/: presale.ts
src/utils/: airdrop.ts  connection.ts  format.ts  helpers.ts  pda.ts  upload-metadata.ts
tests/: palm-presale.ts
